Stretch explainer video to 100% if viewport is smaller than video width

--- a/app/views/misc/frontpage.html.erb
+++ b/app/views/misc/frontpage.html.erb
@@ -33,7 +33,8 @@
 <div class="explainer-video-section">
     <details>
         <summary><div class="explainer-video-section__title button">Se hvordan det fungerer</div></summary>
-        <iframe width="560" height="315" src="<%= Rails.configuration.x.frontpage.explainer_video_url %>" frameborder="0" allowfullscreen></iframe>
+        <iframe class="explainer-video-section__video" width="560" height="315"
+                src="<%= Rails.configuration.x.frontpage.explainer_video_url %>" frameborder="0" allowfullscreen></iframe>
     </details>
 </div>
 
