--- a/app/assets/stylesheets/frontpage.scss
+++ b/app/assets/stylesheets/frontpage.scss
@@ -101,8 +101,6 @@ $break-tiny: 640px;
     }
 }
 
-
-
 .explainer-video-section {
     padding-top: $standard-spacing * 3;
     padding-bottom: $standard-spacing * 2;
@@ -113,7 +111,10 @@ $break-tiny: 640px;
        display: none;
     }
 
-    &__title {
+    &__video {
+        @media screen and (max-width: 560px) {
+            width: 100%;
+        }
     }
 }
 
