--- a/app/views/users/_edit_registration.html.erb
+++ b/app/views/users/_edit_registration.html.erb
@@ -30,14 +30,12 @@
         </div>
 
     <% end %>
-
 <% end %>
 
-
-<!--
-
+<%# double comment: %>
+<%# <!--
 <h3>Cancel my account</h3>
 
 # We need to think about what we will do once a user cancels his account. (delete, flag as deleted, allow email to be re-used?)
-<p>Unhappy? <%#= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
--->
+<p>Unhappy? < %#= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete % ></p>
+--> %>
