Divs aren't legal in summary tags

--- a/app/views/misc/frontpage.html.erb
+++ b/app/views/misc/frontpage.html.erb
@@ -32,7 +32,7 @@
 
 <div class="explainer-video-section">
     <details>
-        <summary><div class="explainer-video-section__title button">Se hvordan det fungerer</div></summary>
+        <summary><span class="explainer-video-section__title button">Se hvordan det fungerer</span></summary>
         <iframe class="explainer-video-section__video" width="560" height="315"
                 src="<%= Rails.configuration.x.frontpage.explainer_video_url %>" frameborder="0" allowfullscreen></iframe>
     </details>
