--- a/app/views/misc/frontpage.html.erb
+++ b/app/views/misc/frontpage.html.erb
@@ -34,7 +34,7 @@
     <details>
         <summary><span class="explainer-video-section__title button">Se hvordan det fungerer</span></summary>
         <iframe class="explainer-video-section__video" width="560" height="315"
-                src="<%= Rails.configuration.x.frontpage.explainer_video_url %>" frameborder="0" allowfullscreen></iframe>
+                src="<%= Rails.configuration.x.frontpage.explainer_video_url %>" allowfullscreen></iframe>
     </details>
 </div>
 
