Add reminder that users can use hashtags to improve search results

--- a/app/views/ads/_form.html.erb
+++ b/app/views/ads/_form.html.erb
@@ -107,6 +107,7 @@
     <div class="u-push-down">
         <label>Beskrivelse</label>
         <%= f.text_area :body, class: 'u-full-width', data: { controller: 'autoSizeTextArea' } %>
+        <small>FIXME: Husk! Du kan bruke #hashtags i beskrivelse til å gjøre det enklere å finne denne annonse i en søk.</small>
     </div>
 
 <%- end -%>
