seriously revamp address editing by integrating it to edit profile page.

--- a/app/views/locations/edit.html.erb
+++ b/app/views/locations/edit.html.erb
@@ -1,6 +1,3 @@
-<h1>Editing Location</h1>
+<%= render partial: "shared/personal_bar", locals: {selected: "Din profil"} %>
 
 <%= render 'form' %>
-
-<%= link_to 'Show', @location %> |
-<%= link_to 'Back', location_path %>
