--- a/app/views/locations/new.html.erb
+++ b/app/views/locations/new.html.erb
@@ -1,11 +1,10 @@
-<%= render partial: "shared/personal_bar", locals: {selected: "Dine annonser"} %>
+<%= render partial: "shared/personal_bar", locals: {selected: "Din profil"} %>
 
 <div class="container">
     <div class="row">
         <div class="eight columns">
             <h1 class="u-push-down">Ny adresse</h1>
             <%= render 'form' %>
-            <%= link_to 'Back', locations_path %>
         </div>
     </div>
 </div>
