make profile edit page prettier

--- a/app/views/users/_edit_profile.html.erb
+++ b/app/views/users/_edit_profile.html.erb
@@ -80,7 +80,7 @@
                 <% else %>
                     <div>
                         <%= evil_icon 'ei-check', size: :s, class: 'u-fill-green' %>
-                        <span>E-post adressen er bekreftet!</span>
+                        <small>E-post adressen er bekreftet!</small>
                     </div>
                 <% end %>
             </div>
@@ -108,7 +108,7 @@
                 <% else %>
                     <div>
                         <%= evil_icon 'ei-check', size: :s, class: 'u-fill-green' %>
-                        <span>Telefonnummeret er bekreftet!</span>
+                        <small>Telefonnummeret er bekreftet!</small>
                     </div>
                 <% end %>
             </div>
