--- a/app/views/ads/_form.html.erb
+++ b/app/views/ads/_form.html.erb
@@ -24,7 +24,7 @@
         <div class="row">
             <div class="five columns">
                 <label>
-                    <span class="label-body">Pris pr dag</span>
+                    <span class="label-body">Utbetales til deg</span>
                 </label>
                 <%= f.number_field :price_in_h,
                         class: "u-full-width",
@@ -33,8 +33,9 @@
             </div>
             <div class="five columns">
                 <label>
-                    <span class="label-body">Utbetales til deg</span>
+                    <span class="label-body">Pris for utleie pr dag</span>
                 </label>
+                <%# FIXME: do a callback to the server. %>
                 <input disabled="true" type="text" name="day_price" class="u-full-width" placeholder="Kr 0" data-payout-for="ad[price_in_h]">
             </div>
         </div>
