Fixed always showing notification and removed overlaid stuff

--- a/app/views/application/_flash_bar.html.erb
+++ b/app/views/application/_flash_bar.html.erb
@@ -1,8 +1,5 @@
-<% 
-    overlaid = !(defined? overlaid).nil? && overlaid
-%>
 <% if notice or alert %>
-    <div class="flash-bar <%=  overlaid ? "flash-bar--overlaid" : "" %>">
+    <div class="flash-bar">
         <div class="container">
             <% if notice %>
                 <%= notice %>
