--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,8 +33,8 @@
 <body>
     <%= evil_icons_sprite %>
     <header>
-        <%= render partial: "top_bar", locals: { hide_search_field: @hide_search_field, overlaid: @overlaid_top_bar } %>
-        <%= render partial: "flash_bar", locals: { overlaid: @overlaid_top_bar } %>
+        <%= render partial: "top_bar", locals: { hide_search_field: @hide_search_field } %>
+        <%= render partial: "flash_bar" %>
     </header>
 
     <%= content_for?(:content) ? yield(:content) : yield %>
